[gd_scene load_steps=6 format=2]

[ext_resource path="res://MetaBoy/Projectiles/Lightning/LightningProjectile.gd" type="Script" id=1]
[ext_resource path="res://MetaBoy/Projectiles/Lightning/Lightning_Projectile.png" type="Texture" id=2]
[ext_resource path="res://MetaBoy/Projectiles/GravityGun/LightningRay.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 2.0

[sub_resource type="SegmentShape2D" id=6]
resource_local_to_scene = true

[node name="LightningProjectile" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="SegmentCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="LightningEffects" type="Node2D" parent="."]

[node name="LightningRay" parent="LightningEffects" instance=ExtResource( 4 )]
z_index = 1
line_color = Color( 1, 1, 1, 1 )
line_width = 2.0
line_division_length = 4

[node name="LightningRay2" parent="LightningEffects" instance=ExtResource( 4 )]
z_index = 1
line_color = Color( 0.552941, 0.776471, 0.247059, 1 )
line_width = 2.0
line_division_length = 4

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
